--- a/push_swap/Makefile
+++ b/push_swap/Makefile
@@ -6,7 +6,7 @@
 #    By: vurrigon <vurrigon@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2019/03/28 15:07:54 by vurrigon          #+#    #+#              #
-#    Updated: 2019/07/23 13:46:31 by vurrigon         ###   ########.fr        #
+#    Updated: 2019/07/26 15:31:44 by vurrigon         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -26,10 +26,10 @@ all: $(NAME_PS) $(NAME_CHECK)
 
 
 $(NAME_CHECK): $(OBJECTS_CHECK)
-	$(CC) $(CFLAGS) $(OBJECTS_CHECK) -L$(PATH_LIB) -lft -o $(NAME_CHECK)
+	$(CC) $(CFLAGS) $(OBJECTS_CHECK) -L$(PATH_LIB) -lft -L$(PATH_LIB) -lftprintf -o $(NAME_CHECK)
 
 $(NAME_PS): $(OBJECTS_PS)
-	$(CC) $(CFLAGS) $(OBJECTS_PS) -L$(PATH_LIB) -lft -o $(NAME_PS) 
+	$(CC) $(CFLAGS) $(OBJECTS_PS) -L$(PATH_LIB) -lft -L$(PATH_LIB) -lftprintf -o $(NAME_PS) 
 
 $(OBJECTS): $(SRCS)
 	$(CC) $(CFLAGS) -c $(SRCS)
