[ADD] BFS [ADD] All paths

--- a/lem_in/Makefile
+++ b/lem_in/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: vurrigon <vurrigon@student.42.fr>          +#+  +:+       +#+         #
+#    By: djast <djast@student.42.fr>                +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2019/02/15 17:18:06 by djast             #+#    #+#              #
-#    Updated: 2019/09/04 11:59:46 by vurrigon         ###   ########.fr        #
+#    Updated: 2019/09/05 16:33:28 by djast            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -35,7 +35,9 @@ COMMON_FILES =	lem_in.c \
 				solver.c \
 				to_array.c \
 				utils.c \
-				free.c
+				free.c \
+				bfs.c \
+				all_paths.c
 
 SRC_DIRECTORY = ./sources/
 SRC_COMMON_FILES = $(addprefix $(SRC_DIRECTORY), $(COMMON_FILES))
