--- a/lem_in/Makefile_graphics
+++ b/lem_in/Makefile_graphics
@@ -6,11 +6,12 @@
 #    By: djast <djast@student.42.fr>                +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2019/02/15 17:18:06 by djast             #+#    #+#              #
-#    Updated: 2019/09/07 14:53:58 by djast            ###   ########.fr        #
+#    Updated: 2019/09/05 16:33:28 by djast            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME_LEM_IN = lem-in
+NAME_VISUAL = visualize
 
 CC = gcc
 CFLAGS = -Wall -Wextra -Werror
@@ -19,15 +20,18 @@ LIBFT_FOLDER = ./libft
 LIBFT = $(LIBFT_FOLDER)/libft.a
 LIBFT_HEADER = $(LIBFT_FOLDER)/libft.h
 
+ID_UN := $(shell id -un)
+
+SDL_FOLDER = /Users/$(ID_UN)/.brew/Cellar/sdl2/2.0.9_1/include/SDL2
+SDL_LIB = /Users/$(ID_UN)/.brew/Cellar/sdl2/2.0.9_1/lib
 
 HEADERS_DIRECTORY = ./includes
 HEADERS = $(HEADERS_DIRECTORY)/lem_in.h
 
-LIBS = -lft -L$(LIBFT_FOLDER)
-INCLUDES = -I$(HEADERS_DIRECTORY) -I$(LIBFT_FOLDER)
+LIBS = -lft -L$(LIBFT_FOLDER) -L$(SDL_LIB) -lSDL2
+INCLUDES = -I$(HEADERS_DIRECTORY) -I$(LIBFT_FOLDER) -I$(SDL_FOLDER)
 
-COMMON_FILES =	lem_in.c \
-				count_ants.c \
+COMMON_FILES =	count_ants.c \
 				error.c \
 				parse_comment.c \
 				parse_links.c \
@@ -40,23 +44,36 @@ COMMON_FILES =	lem_in.c \
 				all_paths.c \
 				init.c
 
+LEM_IN_FILES = lem_in.c
+VISUAL_FILES = visualize.c
+
 SRC_DIRECTORY = ./sources/
 SRC_COMMON_FILES = $(addprefix $(SRC_DIRECTORY), $(COMMON_FILES))
+SRC_LEM_IN = $(addprefix $(SRC_DIRECTORY), $(LEM_IN_FILES))
+SRC_VISUAL = $(addprefix $(SRC_DIRECTORY), $(VISUAL_FILES))
 
 OBJ_FILES_COMMON = $(patsubst %.c, %.o, $(COMMON_FILES))
+OBJ_FILES_LEM_IN = $(patsubst %.c, %.o, $(LEM_IN_FILES))
+OBJ_FILES_VISUAL = $(patsubst %.c, %.o, $(VISUAL_FILES))
 
 OBJ_DIRECTORY = ./objects/
 OBJ_COMMON_FILES = $(addprefix $(OBJ_DIRECTORY), $(OBJ_FILES_COMMON))
+OBJ_LEM_IN = $(addprefix $(OBJ_DIRECTORY), $(OBJ_FILES_LEM_IN))
+OBJ_VISUAL = $(addprefix $(OBJ_DIRECTORY), $(OBJ_FILES_VISUAL))
 
 GREEN = \033[0;32m
 RED = \033[0;31m
 RESET = \033[0m
 
-all: $(NAME_LEM_IN)
+all: $(NAME_LEM_IN) $(NAME_VISUAL)
 
-$(NAME_LEM_IN): $(LIBFT) $(OBJ_DIRECTORY) $(OBJ_COMMON_FILES)
-	@$(CC) $(CFLAGS) $(LIBS) $(INCLUDES) $(OBJ_COMMON_FILES)  -o $(NAME_LEM_IN)
+$(NAME_LEM_IN): $(LIBFT) $(OBJ_DIRECTORY) $(OBJ_COMMON_FILES) $(OBJ_LEM_IN)
+	@$(CC) $(CFLAGS) $(LIBS) $(INCLUDES) $(OBJ_COMMON_FILES) $(OBJ_LEM_IN) -o $(NAME_LEM_IN)
 	@echo "$(RED)$(NAME_LEM_IN) $(GREEN)compiled successfully!$(RESET)"
+
+$(NAME_VISUAL): $(LIBFT) $(OBJ_DIRECTORY) $(OBJ_COMMON_FILES) $(OBJ_VISUAL)
+	@$(CC) $(CFLAGS) $(LIBS) $(INCLUDES) $(OBJ_COMMON_FILES) $(OBJ_VISUAL)  -o $(NAME_VISUAL)
+	@echo "$(RED)$(NAME_VISUAL) $(GREEN)compiled successfully!$(RESET)"
 
 $(OBJ_DIRECTORY):
 	@mkdir -p $(OBJ_DIRECTORY)
@@ -72,6 +89,7 @@ clean:
 	@$(MAKE) -sC $(LIBFT_FOLDER) clean
 	@echo "$(RED)Libft $(GREEN)object files were deleted!$(RESET)"
 	@/bin/rm -rf $(OBJ_COMMON_FILES)
+	@/bin/rm -rf $(OBJ_VISUAL)
 	@echo "$(RED)Object $(GREEN)files deleted.$(RESET)"
 
 fclean: clean
@@ -79,5 +97,7 @@ fclean: clean
 	@echo "$(RED)Libft.a $(GREEN)was deleted.$(RESET)"
 	@/bin/rm -rf $(NAME_LEM_IN)
 	@echo "$(RED)$(NAME_LEM_IN) $(GREEN)was deleted.$(RESET)"
+	@/bin/rm -rf $(NAME_VISUAL)
+	@echo "$(RED)$(NAME_VISUAL) $(GREEN)was deleted.$(RESET)"
 
 re: fclean all
