--- a/lem_in/Makefile
+++ b/lem_in/Makefile
@@ -6,7 +6,7 @@
 #    By: vurrigon <vurrigon@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2019/02/15 17:18:06 by djast             #+#    #+#              #
-#    Updated: 2019/09/07 16:26:22 by vurrigon         ###   ########.fr        #
+#    Updated: 2019/09/08 13:56:04 by vurrigon         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -39,7 +39,8 @@ COMMON_FILES =	lem_in.c \
 				bfs.c \
 				all_paths.c \
 				init.c \
-				print_results.c
+				print_results.c \
+				choose_path.c
 
 SRC_DIRECTORY = ./sources/
 SRC_COMMON_FILES = $(addprefix $(SRC_DIRECTORY), $(COMMON_FILES))
