[ADD] Optimizate_paths [FIX] Get_all_path()

--- a/lem_in/Makefile
+++ b/lem_in/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: vurrigon <vurrigon@student.42.fr>          +#+  +:+       +#+         #
+#    By: djast <djast@student.42.fr>                +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2019/02/15 17:18:06 by djast             #+#    #+#              #
-#    Updated: 2019/09/08 13:56:04 by vurrigon         ###   ########.fr        #
+#    Updated: 2019/09/09 17:18:51 by djast            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -40,7 +40,8 @@ COMMON_FILES =	lem_in.c \
 				all_paths.c \
 				init.c \
 				print_results.c \
-				choose_path.c
+				choose_path.c \
+				optimize.c
 
 SRC_DIRECTORY = ./sources/
 SRC_COMMON_FILES = $(addprefix $(SRC_DIRECTORY), $(COMMON_FILES))
