--- a/lem_in/Makefile_graphics
+++ b/lem_in/Makefile_graphics
@@ -55,7 +55,8 @@ VISUAL_FILES = visualize.c \
 				draw.c\
 				SDL.c \
 				key.c \
-				print_result_sdl.c
+				print_result_sdl.c \
+				free_sdl.c
 
 SRC_DIRECTORY = ./sources/
 SRC_COMMON_FILES = $(addprefix $(SRC_DIRECTORY), $(COMMON_FILES))
