--- a/corewar/Makefile
+++ b/corewar/Makefile
@@ -6,7 +6,7 @@
 #    By: djast <djast@student.42.fr>                +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2019/02/15 17:18:06 by djast             #+#    #+#              #
-#    Updated: 2019/12/06 18:21:55 by djast            ###   ########.fr        #
+#    Updated: 2019/12/29 12:05:08 by djast            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -78,7 +78,8 @@ FILSE_COREWAR = corewar.c \
 				op_aff.c \
 				op_and_or_xor.c \
 				op_fork_lfork.c \
-				op_ld_ldi_lld_lldi.c \
+				op_ld_ldi.c \
+				op_lld_lldi.c \
 				op_live.c \
 				op_st_sti.c\
 				op_utils.c \
