--- a/corewar/Makefile
+++ b/corewar/Makefile
@@ -6,7 +6,7 @@
 #    By: djast <djast@student.42.fr>                +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2019/02/15 17:18:06 by djast             #+#    #+#              #
-#    Updated: 2019/12/29 13:55:16 by djast            ###   ########.fr        #
+#    Updated: 2019/12/29 15:39:59 by djast            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -88,7 +88,10 @@ FILSE_COREWAR = corewar.c \
 				draw.c \
 				draw_map.c \
 				draw_right_panel.c \
-				parse_args.c
+				parse_args.c \
+				key.c \
+				make_command.c \
+				check_valid.c
 
 SRC_DIRECTORY = ./srcs/
 SRC_DIRECTORY_ASM = $(SRC_DIRECTORY)asm/
